k8s/aws/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
  namespace: go-banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-api
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
        - name: banking-api
          image: 348362971250.dkr.ecr.us-east-1.amazonaws.com/go-banking-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: banking-api
  namespace: go-banking
spec:
  type: ClusterIP
  selector:
    app: banking-api
  ports:
    - port: 8080
      targetPort: 8080
